# svelte-counter

./: Cargo.toml  build.rs
src/: main.rs
webui/: package-lock.json  package.json  svelte.config.js
webui/src/routes/: +page.svelte
