[package]
name = "sse-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", features = ["json"] }
axum-extra = { git = "https://github.com/tokio-rs/axum.git" ,features = ["typed-header"] }
headers = "0.3.8"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1.14"
futures = "0.3"
rust-embed = { version = "6.8.1", features = ["axum"] }
mime_guess = "2.0.4"

[build-dependencies]
build-deps = "0.1.4"
npm_rs = "1.0.0"
